zzlog/20250303/20240909_142415train.txt
  File "train.py", line 57
    print(f"ğŸ¾train_main  {datetime.datetime.now().strftime("%Y%m%d_%H%M%S")}")########
                                                                            ^
SyntaxError: invalid syntax
